Added menu page.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Emshn.io</string>
+    <string name="title_activity_help">HelpActivity</string>
 </resources>
